<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/description_add"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/type_RB"
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <RadioButton
            android:id="@+id/radio_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radio_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high" />
    </RadioGroup>

    <Button
        android:id="@+id/add_task_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onAddClicked"
        android:text="@string/add" />

</LinearLayout>