<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextNickName"
        android:layout_width="231dp"
        android:layout_height="59dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:hint="@string/nick_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="#C13B3B"
        android:textColorHighlight="#14C5A2"
        android:textColorHint="#C13B3B"
        android:textColorLink="#FFFFFF"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="231dp"
        android:layout_height="59dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:background="@drawable/text_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#C13B3B"
        android:textColorHighlight="#BA5959"
        android:textColorHint="#C13B3B"
        android:textColorLink="#D31B1B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNickName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="235dp"
        android:layout_height="92dp"
        android:background="@drawable/button_background"
        android:text="@string/zaloguj"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.572" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="125dp"
        android:layout_height="91dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>